style.css
@import "tailwindcss";
@import "tw-animate-css";

@theme {
  --color-background: white;
  --color-foreground: black;
  --color-accent: #88ab97;
  --color-accent-foreground: white;
  --color-secondary: #efefef;
  --color-secondary-foreground: #eee;

  --color-background-code: #333;
  --color-text-code: white;

  --color-chat-agent: #dedede;
  --color-chat-user: #efefef;
}

/* dark theme override */
[data-theme="dark"] {
  --color-background: #111;
  --color-foreground: #eee;
  --color-accent: #88ab97;
  --color-accent-foreground: white;
  --color-secondary: #1a1a1a;
  --color-secondary-foreground: #ccc;

  --color-code: #222;
  --color-code-foreground: #ddd;

  --color-chat-agent: #222;
  --color-chat-user: #333;
}

body {
  background-color: var(--color-background);
  color: var(--color-foreground);
}

/* Hide scrollbar for Chrome, Safari and Opera */
.no-scrollbar::-webkit-scrollbar {
  display: none;
}

/* Hide scrollbar for IE, Edge and Firefox */
.no-scrollbar {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}

.lora {
  font-family: Lora;
}

.work {
  font-family: "Work Sans", sans-serif;
}

